--- a/about_me/index.html
+++ b/about_me/index.html
@@ -104,11 +104,9 @@ Sou &amp;hellip;">
 <h3>Contato</h3>
 <p>O meu email: <a href="mailto:loumoura@gmail.com">loumoura@gmail.com</a></p>
 <hr />
-<div class="figure" style="text-align: center"><span id="fig:jobs"></span>
-<img src="/img/jobs.png" alt="Projetos de construção residencial em New York" width="100%" />
-<p class="caption">
-Figure 1: Projetos de construção residencial em New York
-</p>
+<div class="figure">
+<img src="/img/jobs.png" alt="Projetos de construção residencial em New York" />
+<p class="caption">Projetos de construção residencial em New York</p>
 </div>
 </div>
 
