--- a/about_me/index.html
+++ b/about_me/index.html
@@ -109,16 +109,14 @@ Durante uma década, fui <strong>Director</strong> de uma empresa de construçã
 
 <hr />
 
-<p><center>
- <figure >
+<p><figure >
             <img src="/img/jobs.png" alt="Projects" width="100%" >
       <figcaption>
       <small>
-      Projetos de construção residencial em New York
+      Projetos construção residencial em New York
       </small>
       </figcaption>
-</figure>
-</center></p>
+</figure></p>
 
 
   <footer>
