--- a/about_me/index.html
+++ b/about_me/index.html
@@ -107,16 +107,7 @@ Durante uma década, fui <strong>Director</strong> de uma empresa de construçã
 
 <p>O meu email: <a href="mailto:loumoura@gmail.com">loumoura@gmail.com</a></p>
 
-<hr />
-
-<p><figure >
-            <img src="/img/jobs.png" alt="Projects" width="100%" >
-      <figcaption>
-      <small>
-      Projetos construção residencial em New York
-      </small>
-      </figcaption>
-</figure></p>
+<p><img class="img-circle" src="/img/jobs.png" style="width:100%" alt="Projetos construção residencial em New York"></p>
 
 
   <footer>
