--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <p><a href="/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/%D0%A4%D0%B8%D0%B7%D0%B8%D0%BA%D0%B0.jpg/600px-%D0%A4%D0%B8%D0%B7%D0%B8%D0%BA%D0%B0.jpg" style="max-width:15%;min-width:40px;float:right;" alt="Ciência" /></a></p>
 
-<p>Trabalho na construção civíl. Já fui carpinteiro e já fui director de uma empresa de construção. A minha formação académica é em engenharia civil. Acredito que o <a href="https://en.wikipedia.org/wiki/Building_information_modeling">Building information modeling</a> é uma ferramente essêncial à gestão de um projeto, que deve ser usada com cuidado e sem abusos.
+<p>Trabalho na construção civíl. Já fui carpinteiro e já fui director de uma empresa de construção. A minha formação académica é em engenharia civil. Acredito que o <a href="https://en.wikipedia.org/wiki/Building_information_modeling">Building information modeling</a> é uma ferramenta essêncial à gestão de um projeto, que deve ser usada com cuidado e sem abusos.
 Acredito em botas sujas, no café americano em copo grande e que as obras devem ser visitadas preferencialmente da parte da manhã, antes dos erros acontecerem e quando o nível de energia e atenção das equipas é mais elevado.</p>
 
 <hr />
