--- a/about_me/index.html
+++ b/about_me/index.html
@@ -110,7 +110,7 @@ Durante uma década, fui <strong>Director</strong> de uma empresa de construçã
 
 <h3 id="contato">Contato</h3>
 
-<p>O meu email: <a href="mailto:loumoura@gmail.com">loumoura@gmail.com</a></p>
+<p>O meu email: <a href="mailto:lmoura@pm.me">lmoura@pm.me</a></p>
 
 <hr />
 
