--- a/404.html
+++ b/404.html
@@ -55,6 +55,8 @@
   
   <li><a href="/files/cv.pdf">CV</a></li>
   
+  <li><a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.pt">Licença</a></li>
+  
   
   </ul>
 </nav>
