--- a/about_me/index.html
+++ b/about_me/index.html
@@ -90,7 +90,7 @@ A minha área de interesse profissional e académica é a Gestão de Projetos na
 
 <p>Sou <strong>Diretor de Obra e Programa</strong>, certificado pelo <a href="https://cmaanet.org/">Construction Management Association of America</a> como Certified Construction Manager ( <strong>CCM</strong> ), e pelo <a href="https://www.pmi.org/">Project Management Institute</a> como Project Management Professional (<strong>PMP</strong> ).</p>
 
-<p>Mais de 20 anos de experiência em planeamento e construção, tanto lidando com Dono/s-de-Obra, como com as actividades relacionadas com o funcionamento do estaleiro-de-obra e do projeto de construção civil.
+<p>Com mais de 20 anos de experiência em planeamento e construção, tanto lidando com Dono/s-de-Obra, como com as actividades relacionadas com o funcionamento do estaleiro-de-obra e do projeto de construção civil.
 Durante uma década, fui <strong>Director</strong> de uma empresa de construção civil, com sede em New York, nos Estados Unidos, com um volume anual de negócios na ordem dos cinco milhões de dólares. Como Diretor, fiz a supervisão a mais de uma centena de projetos de construção residencial de alto padrão (moradias de luxo) e a vários projetos comerciais.</p>
 
 <p>Currículo em formato PDF: <a href="/files/cv.pdf">curriculum vitae</a></p>
