add post reinf viga
and also added whatsapp contact

--- a/about_me/index.html
+++ b/about_me/index.html
@@ -59,7 +59,7 @@
   
   <li class="active"><a href="/about_me/">Autor</a></li>
   
-  <li><a href="/files/cv.pdf">CV</a></li>
+  <li><a href="/contact/">Contato</a></li>
   
   
   </ul>
@@ -93,8 +93,6 @@ A minha área de interesse profissional e académica é a Gestão de Projetos na
 
 <p>Com mais de 20 anos de experiência em planeamento e construção, tanto lidando com Dono/s-de-Obra, como com as actividades relacionadas com o funcionamento do estaleiro-de-obra e do projeto de construção civil.
 Durante uma década, fui <strong>Director</strong> de uma empresa de construção civil, com sede em New York, nos Estados Unidos, com um volume anual de negócios na ordem dos cinco milhões de dólares. Como Diretor, fiz a supervisão a mais de uma centena de projetos de construção residencial de alto padrão (moradias de luxo) e a vários projetos comerciais.</p>
-
-<p>Currículo em formato PDF: <a href="/files/cv.pdf">curriculum vitae</a></p>
 
 <h3 id="interesses">Interesses</h3>
 
