update profile pic

--- a/about_me/index.html
+++ b/about_me/index.html
@@ -83,7 +83,7 @@
 
 
 
-<p class="left"><img class="img-circle" src="/img/portrait.png" style="width:120px" alt="lmoura"></p>
+<p class="left"><img class="img-circle" src="/img/portrait.jpg" style="width:120px" alt="lmoura"></p>
 
 <p>O meu nome é Luis Moura. Sou português-americano, e até recentemente, vivia em New York.
 No website, pode encontrar alguns dos projetos, interesses e opinões sobre o meu trabalho.
